[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-analyser"
version = "0.1.0"
description = "Analyse a repository and generate structured context documents for AI-assisted coding."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Repo Analyser contributors" }]
keywords = ["ai", "claude", "documentation", "repository-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.6"]

[project.scripts]
repo-analyser = "repo_analyser.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["repo_analyser*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# Embedded JSON schema in ANALYSIS_PROMPT_TEMPLATE uses long single lines for the model.
"repo_analyser/analysis.py" = ["E501"]
